--- a/report/main.tex
+++ b/report/main.tex
@@ -11,6 +11,9 @@
 \usepackage{enumitem} %Customize enumerations
 \usepackage{mathtools}
 
+%appendix
+\usepackage{appendix}
+
 %links
 \usepackage{hyperref}
 
@@ -129,5 +132,8 @@
 	\include{include/implementation}
 	\include{include/theorems}
 	\include{include/evaluation}
+	
+	%\include{include/appendix}
+	
 	
 \end{document}
